[project]
name = "budget-tracker"
version = "0.1.0"
description = "Financial tracker with AI optimization"
requires-python = ">=3.11"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"] # Error, F-strings, Isort
ignore = [
    "E501", # Ignore line length violations (too opinionated)
    "D100", # Ignore missing docstrings in public modules
    "D103", # Ignore missing docstrings in public functions
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]